uploadcenter überarbeitet, app.config bearbeitet

--- a/frontend/src/app/uploadCenter/uploadCenterView.html
+++ b/frontend/src/app/uploadCenter/uploadCenterView.html
@@ -1,60 +1,74 @@
 <h2 class="page-header">
-  {{title}}
-  <small>{{description}}</small>
+    {{title}}
+    <small>{{description}}</small>
 </h2>
 
 <h3>Hochgeladene Dateien</h3>
 <div class="row">
-  <div class="col-lg-12">
-    <table class="table table-hover">
-      <thead>
-      <tr>
-          <th>Vorschau</th>
-        <th>Name</th>
-        <th>Größe</th>
-        <th>Aktion</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let file of files; let i = index">
-          <td><img src="{{file.file}}" height="80" width="80"></td>
-        <td>{{file.name}}</td>
-        <td>{{getImgSize(i)}} kb</td>
-        <td>
-          <div class="btn-group" role="group">
-            <a class="btn btn-default" (click)="showPicture(i)"><i class="glyphicon glyphicon-picture" aria-hidden="true"></i></a>
-              <label class="btn btn-default btn-file"><i class="fa fa-refresh" aria-hidden="true"><input type="file" class="hidden" accept="image/jpeg|image/jpg|image/png|image/gif" #fileToReplace (change)="replaceFile(fileToReplace, i)"></i></label>
-            <button type="button" class="btn btn-danger">
-              <i class="fa fa-trash-o" aria-hidden="true"></i>
-            </button>
-          </div>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+    <div class="col-lg-12">
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>Vorschau</th>
+                <th>Name</th>
+                <th>Größe</th>
+                <th>Aktion</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let file of files; let i = index">
+                <td><img src="{{file.file}}" height="80" width="80"></td>
+                <td>{{file.id}}</td>
+                <td>{{getImgSize(file.blob.size)}}</td>
+                <td>
+                    <div class="btn-group" role="group">
+                        <a class="btn btn-default" (click)="showPicture(i)"><i class="glyphicon glyphicon-picture" aria-hidden="true"></i></a>
+                        <label class="btn btn-default btn-file"><i class="fa fa-refresh" aria-hidden="true"><input type="file" class="hidden"
+                                                                                                                   accept="image/jpeg|image/jpg|image/png|image/gif"
+                                                                                                                   #fileForReplaceInput
+                                                                                                                   (change)="replaceFile(fileForReplaceInput, file.id)"></i></label>
+                        <button type="button" class="btn btn-danger" (click)="deleteFile(file.id)">
+                            <i class="fa fa-trash-o" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <div class="row">
-  <div class="col-lg-12">
-    <h3>Datei hochladen</h3>
-  </div>
+    <div class="col-lg-12">
+        <h3>Datei hochladen</h3>
+    </div>
 </div>
 <div class="row">
-  <div class="col-lg-12">
-    <form>
-      <div class="form-group">
+    <div class="col-lg-12">
+        <form>
+            <div class="form-group">
 
-        <label for="inputFile">Dateiauswahl</label>
-          <input #fileInput (change)="fileChange(fileInput)" id="imagePath" class="form-control" type="file" name="Image" accept="image/jpeg|image/jpg|image/png|image/gif|application/pdf" id="inputFile"/>
+                <label for="inputFile">Dateiauswahl</label>
+                <input #fileInput (change)="pickFile(fileInput)" id="imagePath" class="form-control" type="file" name="Image"
+                       accept="image/jpeg|image/jpg|image/png|image/gif|application/pdf" id="inputFile"/>
 
-        <p class="help-block">Nur folgende Dateitypen sind erlaubt:
-          {{settings.uploadCenterPDFFileTypes}},{{settings.uploadCenterPictureFileTypes}}</p>
-        <p class="help-block">Die Dateien sind auf eine maximal Größe von {{settings.uploadCenterMaxFileSize | fileSize}} beschränkt.</p>
-      </div>
-      <button type="submit" class="btn btn-primary" (click)="upload()">hochladen</button>
-      <button type="submit" class="btn btn-primary" (click)="testMethod()">Test-Button</button>
-      <button type="submit" class="btn btn-primary" (click)="reload()">reload files (debug)</button>
-    </form>
-  </div>
+                <div class="alert alert-danger" *ngIf="choosenIllegalFileType">
+                    <strong>Achtung!</strong> Die folgenden Dateien entsprechen nicht den zugelassenen Datentypen:<br>
+                    <p>{{illegalFiles}}</p>
+                </div>
+
+                <p class="help-block">Nur folgende Dateitypen sind erlaubt:
+                    {{settings.uploadCenterApplicationFileTypes}},{{settings.uploadCenterImageFileTypes}}</p>
+                <p class="help-block">Die Dateien sind auf eine maximal Größe von {{settings.uploadCenterMaxFileSize | fileSize}} beschränkt.</p>
+            </div>
+            <button type="submit" class="btn btn-primary" (click)="uploadFile()">hochladen</button>
+            <button type="submit" class="btn btn-primary" (click)="testMethod()">Test-Button</button>
+            <button type="submit" class="btn btn-primary" (click)="reload()">reload files (debug)</button>
+
+            <div class="alert alert-danger" *ngIf="uploadErrorHappens">
+                <strong>Fehler</strong> {{uploadErrorMessage}}
+                <p>{{illegalFiles}}</p>
+            </div>
+        </form>
+    </div>
 </div>
