--- a/frontend/src/app/product/productInfo.component.html
+++ b/frontend/src/app/product/productInfo.component.html
@@ -173,7 +173,7 @@
   </div>
 </div>
 
-<div class="row bottom-space">
+<div class="row bottom-space" *ngIf="showFiles">
   <div class="col-md-12 bottom-space" *ngFor="let file of product.fileGallery">
     <div class="row">
       <div class="col-md-2">
